syntax = "proto3";

message CanvasRequest {
  repeated Track tracks = 1;
  message Track {
    string track_uri = 1;
  }
}

message CanvasResponse {
  repeated Canvas canvases = 1;
  message Canvas {
    string id = 1;
    string canvas_url = 2;
    string track_uri = 5;
    message Artist {
      string artist_uri = 1;
      string artist_name = 2;
      string artist_img_url = 3;
    }
    Artist artist = 6;
    string other_id = 9;
    string canvas_uri = 11;
  }
}